--- a/Krefel'd.mw
+++ b/Krefel'd.mw
@@ -13,10 +13,20 @@
  | Telefonkod = +49-2151
  | Aigvö = tal'vel [[UTC]]+1,<br />kezal [[UTC]]+2
 }}
-[[Fail:Krefeld Stadtteile.png|thumb|left|250px|Krefel'dan lidnrajonad.]]
-'''Krefel'd''' ({{lang-de|Krefeld}} [ˈkʁeːfɛlt], vhesai 1929 kirjutihe ''Crefeld'') om lidn [[Saksanma]]n da [[Pohjoine Rein da Vestfalii]]-federacijanman päivlaskmas.
+[[Fail:Krefeld Stadtteile.png|thumb|left|250px|Krefel'dan lidnrajonad]]
+'''Krefel'd''' ({{lang-de|Krefeld}} [ˈkʁeːfɛlt], vhesai 1929 kirjutihe ''Crefeld'') om lidn [[Saksanma]]n i sen [[Pohjoine Rein da Vestfalii]]-federacijanman päivlaskmas.
 
-Lidn sijadase [[Rein]]-jogen hural randal, 38 m korktusel valdmeren pindan päl. [[Duisburg]]-lidn om vastrandal. Krefel'd jagase 9 ümbrikoks (saks. ''bezirk''), ned alajagasoiš 19 lidnrajonha (saks. ''Stadtteil'').
+== Istorii ==
+Eländpunktan aluz om pandud Rimalaižen imperijan aigan völ. Keskaigaline lidn šingotihe tekstilin manufakturoil.
+
+Vl 1702 mülütihe lidnad Prussijan kunigahushe. Tora Krefel'danno tegihe Seičemevoččen sodan aigan vl 1758. Ezmäižen mail'man sodan aigan Bel'gijan armii kävuti lidnad bazaks Reinan agjan okkupacijan täht vl 1918.
+
+Vl 1929 ühtištuihe lidnad Erdingen-lidnanke (alusenpanend 1255), i vhesai 1940 eländpunktan nimituz oli Krefel'd-Erdingen, sid' nügüdläine.
+
+== Geografijan andmused ==
+Lidn sijadase [[Rein]]-jogen hural randal, 38 m korktusel valdmeren pindan päl. [[Duisburg]]-lidn om vastrandal.
+
+Krefel'd jagase 9 ümbrikoks ({{lang-de|bezirk}}), ned alajagasoiš 19 lidnrajonaks (saks. ''Stadtteil'').
 
 Vl 2013 eläjiden lugu oli 222 058 ristitud.
 
