*Empty MediaWiki Message*

--- a/Krefel'd.mw
+++ b/Krefel'd.mw
@@ -14,21 +14,21 @@
  | Aigvö = tal'vel [[UTC]]+1,<br />kezal [[UTC]]+2
 }}
 [[Fail:Krefeld Stadtteile.png|thumb|left|250px|Krefel'dan lidnrajonad]]
-'''Krefel'd''' ({{lang-de|Krefeld}} [ˈkʁeːfɛlt], vhesai 1929 kirjutihe ''Crefeld'') om lidn [[Saksanma]]n i sen [[Pohjoine Rein da Vestfalii]]-federacijanman päivlaskmas.
+'''Krefel'd''' ({{lang-de|Krefeld}} [ˈkʁeːfɛlt], vhesai 1925 kirjutihe ''Crefeld'') om lidn [[Saksanma]]n i sen [[Pohjoine Rein da Vestfalii]]-federacijanman päivlaskmas.
 
 == Istorii ==
 Eländpunktan aluz om pandud Rimalaižen imperijan aigan völ.
 
 Vl 1702 mülütihe lidnad Prussijan kunigahushe. Tora Krefel'danno tegihe Seičemevoččen sodan aigan vl 1758. Ezmäižen mail'man sodan aigan Bel'gijan armii kävuti lidnad bazaks Reinan agjan okkupacijan täht vl 1918.
 
-Vl 1929 ühtištuihe lidnad Erdingen-lidnanke (alusenpanend 1255), i vhesai 1940 eländpunktan nimituz oli Krefel'd-Erdingen, sid' nügüdläine.
+Vl 1929 ühtištuihe lidnad Erdingen-lidnanke päivnouzmas (alusenpanend 1255), i vhesai 1940 eländpunktan nimituz oli Krefel'd-Erdingen, sid' nügüdläine.
 
 Ende lidn šingotihe tekstilin manufakturoil. Nügüd'aigaižen Krefel'dan znamasine edheotand om terazlehtesiden tegim, mugažo živatsötken kompanijan päfater sijadase lidnas.
 
 == Geografijan andmused ==
 Lidn sijadase [[Rein]]-jogen hural randal, 38 m korktusel valdmeren pindan päl. [[Duisburg]]-lidn om vastrandal.
 
-Krefel'd jagase 9 ümbrikoks ({{lang-de|bezirk}}), ned alajagasoiš 19 lidnrajonaks (saks. ''Stadtteil'').
+Krefel'd jagase ühesaks ümbrikoks ({{lang-de|bezirk}}), ned alajagasoiš 19 lidnrajonaks (saks. ''Stadtteil'').
 
 Vl 2013 eläjiden lugu oli 222 058 ristitud. Kaikiš suremb lidnan ristitišt oli 249 tuhad eläjid vll 1993−1995.
 
