--- a/Babaksad.mw
+++ b/Babaksad.mw
@@ -11,7 +11,7 @@ Om nell' erikod, kaik om [[kadojad erikad|kadomižen grazindan]] al:
 * ''Babax woodi''
 
 == Ümbrikirjutand ==
-Suugad oma lühüdad kehkranvuiččed 10..14 sm pitte, händ om pit'k, 16 sanimetrhasai. N'ok om pit'kahk i kover vähäižin. Nenasäriden pind om hibusekaz.
+Suugad oma lühüdad kehkranvuiččed 10..14 sm pitte, händ om pit'k, 16 sanimetrhasai. N'ok om pit'kahk i kover vähäižin. Nenasärmiden pind om hibusikaz.
 
 Lindud elädas tropikoiden i subtropižen vönen mecoiš da penzhištos, mägiden pautkil i alangoiš. Tibetine ''Babax koslowi''-erik vasttase korktusil 4500 metrhasai ü.m.t..
 
