--- a/Zim.mw
+++ b/Zim.mw
@@ -14,12 +14,12 @@
  | Avtokod = 38. 85. 138
  | Aigvö = [[UTC]]+8 ([[MSK]]+5)
 }}
-'''Zim''' ({{lang-ru|Зима}}, {{lang-bua|Зэмэ хото}}) om [[Venäma]]n lidn da lidnümbrik [[Irkutskan agj]]an suves. Om [[Ziman rajon]]an administrativižeks keskuseks mugažo, ei mülü sihe.
+'''Zim''' ({{lang-ru|Зима́}}, {{lang-bua|Зэмэ хото}}) om [[Venäma]]n lidn da lidnümbrik [[Irkutskan agj]]an suves. Om [[Ziman rajon]]an administrativižeks keskuseks mugažo, ei mülü sihe.
 
 == Istorii ==
 Eländpunkt mainitase ezmäižen kerdan vl 1739 Milleran «Matkan ümbrikirjutand Jeniseiskaspäi Irkutskhasai»-käzikirjuteses kuti ''Mironovo'' vai ''Ziman tal'vdundsija'' ({{lang-ru|Зиминское зимовье}}), nimitihe [[Zim (jogi, Irkutskan agj)|Zim-jogen]] mödhe ({{lang-ru|Зима}}, {{lang-bua|Зэмэ}}), nimituz om burätan augotižlibundanke. Alusenpanendan oficialine voz' praznuičendan täht — 1743. Šingotaškanzihe Moskvan traktan sauvomiženke vspäi 1772, ehtatimenno Okanjoges päliči. Vl 1891 [[Transsib]] läbiti žilod, sädihe Zim-raudtestancijad. Žilo sai lidnan statusad vl 1922. Vspäi 1963 alištub agjan tobmudele oikti.
 
-Lidn šingotase raudten edheotandoil (vedimdepo, vagondepo, raudten distancii) da mecan ümbriradmižel pilindmaterialoihe.
+Zim-lidn šingotase raudten edheotandoil (vedimdepo, vagondepo, raudten distancii) da mecan ümbriradmižel pilindmaterialoihe.
 
 == Geografijan andmused ==
 Lidn sijadase [[Ok (Angaran ližajogi)|Okanjogen]] hural randal (lankteb Bratskan vezivaradimhe, [[Angar (jogi)|Angaran]] hurapol'ne bassein, {{lang-ru|Ока}}, {{lang-bua|Аха гол}}) da sen Zim-ližajogen sun randoil, 450 m ü.m.t. keskmäižel korktusel. Matkad [[Irkutsk]]hasai om 235 km suvipäivnouzmha orhal, 265 km avtotedme vai raudtedme. Lähembaine lidn om [[Sajansk]] 21 km pohjoižhe orhal, 24 km avtotedme vai Okan mödvedhe. Voib olda [[manrehkaiduz|manrehkaidusid]] (6 ballhasai 12:späi), om [[igähine roug|igähižen rougun]] linzoid lidnan territorijal.
@@ -27,9 +27,18 @@ Lidn sijadase [[Ok (Angaran ližajogi)|Okanjogen]] hural randal (lankteb Bratska
 Zim om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 32 508 ristitud. Kaikiš suremb ristitišt oli 48 097 eläjid vl 1979. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Mikulai-čudonsädajan i Eloauguižen Stroican jumalanpertid oma olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 32 508 ristitud. Kaikiš suremb ristitišt oli 48 097 eläjid vl 1979.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Mikulai-čudonsädajan i Eloauguižen Stroican jumalanpertid oma olmas lidnas.
 
 Professionaližen opendusen aluzkund om Ziman raudtetehnikum.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+38 Водонапорная башня Зима.jpg|Vezičuhunduz (2014)
+Electric locomotive VL22m-692.jpg|VL22m-692-elektrovedim (2007)
+Sima 2016.jpg|Zim-päraudtestancijan sauvuz vl 2016
+</gallery>
 
 == Irdkosketused ==
 * [http://www.zimadm.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''zimadm.ru'').] {{ref-ru}}
