--- a/Taišet.mw
+++ b/Taišet.mw
@@ -25,9 +25,19 @@ Lidn sijadase peniden Taišetk- ({{lang-ru|Тайшетка}}) i Akul'šetk-jogi
 Taišet om lidnankundan üks'jäine eländpunkt.
 
 == Eläjad da ižanduz ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 35 485 ristitud, rajonan nell' ühesandest. Kaikiš suremb ristitišt oli 42..43 tuhad eläjid vozil 1989−2001 (43 tuh. rist. vll 1992−1996). Ortodoksižen hristanuskondan phh. Pedroin da Pauloin jumalankodi i islaman pühäpert' oma olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 35 485 ristitud, rajonan nell' ühesandest. Kaikiš suremb ristitišt oli 42..43 tuhad eläjid vozil 1989−2001 (43 tuh. rist. vll 1992−1996).
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] phh. Pedroin da Pauloin jumalankodi i [[islam]]an pühäpert' oma olmas lidnas.
 
 Koume raudted ühtenzoittas lidnas: Transsib, [[Baikalan-Amuran magistral'|BAM]] i [[Suvisibirine magistral']]. Raudten passažirstancii, sortiruindstancii, 3 depod oma lidnas. Mecsarakon da sömtegimišton edheotandad ratas Taišetas. Vspäi 2008 alüminijantegim om sauvomas.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Водонапорная башня ст. Тайшет.jpg|Vezičuhunduz-muštnik (2013, om saudud vl 1906)
+Тайшет (станция) 2.jpg|Päivnouzmaižen Sibirin raudten kontor sen Taišetan regionas vl 2021 i muštnik «40 vot BAM:ale» (om pandud vl 2014)
+Tayshet Postal Sorting Centre - 6.jpeg|Lidnan počtan sortiruindkeskuz läz päraudtestancijad vl 2020
+Тайшетский вокзал.jpg|Taišet-päraudtestancii vl 2017
+</gallery>
 
 == Homaičendad ==
 <references />
