--- a/Taišet.mw
+++ b/Taišet.mw
@@ -27,14 +27,14 @@ Taišet om lidnankundan üks'jäine eländpunkt.
 == Eläjad da ižanduz ==
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 35 485 ristitud, rajonan nell' ühesandest. Kaikiš suremb ristitišt oli 42..43 tuhad eläjid vozil 1989−2001 (43 tuh. rist. vll 1992−1996).
 
-[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] phh. Pedroin da Pauloin jumalankodi i [[islam]]an pühäpert' oma olmas lidnas.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] phh. Pedroin da Pauloin jumalanpert' om olmas lidnas, ühtennimine mez'jumalankodi i Jumalanmaman «Kaikiden gorähižiden ihastuz»-jumalaižen pühäpert'<ref>[http://taishet.blagochin.ru/xramy/xram-vsex-skorbyashhix-radoste-g-tajshet-2/ Taišetan «Kaikiden gorähižiden ihastuz»-jumalaižen pühäpert' ''taishet.blagochin.ru''-saital.] {{ref-ru}}</ref> oma sauvomas, [[protestantizm]]an kaks' kundad oma registiruidud, mugažo [[islam]]an pühäpert' om väges.
 
 Koume raudted ühtenzoittas lidnas: Transsib, [[Baikalan-Amuran magistral'|BAM]] i [[Suvisibirine magistral']]. Raudten passažirstancii, sortiruindstancii, 3 depod oma lidnas. Mecsarakon da sömtegimišton edheotandad ratas Taišetas. Vspäi 2008 alüminijantegim om sauvomas.
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
 Водонапорная башня ст. Тайшет.jpg|Vezičuhunduz-muštnik (2013, om saudud vl 1906)
-Тайшет (станция) 2.jpg|Päivnouzmaižen Sibirin raudten kontor sen Taišetan regionas vl 2021 i muštnik «40 vot BAM:ale» (om pandud vl 2014)
+Тайшет (станция) 2.jpg|[[Päivnouzmaižsibirine raudte|Päivnouzmaižsibirižen raudten]] kontor sen Taišetan regionas vl 2021 i muštnik «40 vot BAM:ale» (om pandud vl 2014)
 Tayshet Postal Sorting Centre - 6.jpeg|Lidnan počtan sortiruindkeskuz läz päraudtestancijad vl 2020
 Тайшетский вокзал.jpg|Taišet-päraudtestancii vl 2017
 </gallery>
