--- a/Linde.mw
+++ b/Linde.mw
@@ -1,7 +1,7 @@
-{{Muzikgrupp|Nimi=Linde|Logo=|Foto=|Žanrad=depressive blekmetal|Voded=2021–|Valdkund=Pol'šanma|Lidn=|Kel'=[[anglijan kel']]<br />[[pol'šan kel']]|Leiblad=|Toižed projektad=|Mülükund=Michał Markowski|Eksühtnijad=|Sait=}}
-'''Linde''' om [[Pol'šanma|pol'šanmaine]] muzikprojekt. Se edestab muzikad [[depressive blekmetal]]-stiliš.
+{{Muzikgrupp|Nimi=Linde|Logo=|Foto=|Žanrad=depressivine blekmetal|Voded=2021—|Valdkund=Pol'šanma|Lidn=|Kel'=[[anglijan kel']]<br />[[pol'šan kel']]|Leiblad=|Toižed projektad=|Mülükund=Mihal Markovski|Eksühtnijad=|Sait=}}
+'''Linde''' om [[pol'šanma]]ine muzikprojekt. Se edestab muzikad depressivine [[blekmetal]]-stiliš.
 
-Muzikgruppan aluz om pandud vl 2021<ref>[https://www.metal-archives.com/bands/Linde/3540501984 Tedod «Linde»-projektas ''metal-archives.com''-saital.] {{ref-en}}</ref>.
+Muzikgruppan aluz om pandud vl 2021<ref>[https://www.metal-archives.com/bands/Linde/3540501984 Tedod «Linde»-projektas ''metal-archives.com''-saital.] {{ref-en}}</ref>. Sen ühtnii om Mihal Markovski (''Michał Markowski'').
 
 == Diskografii ==
 ;Studijanal'bomad
