--- a/Keil_Džon.mw
+++ b/Keil_Džon.mw
@@ -2,7 +2,12 @@
 | изображение = John Cale 2006.jpg
 | описание изображения = Džon Keil vl 2006
 }}
-'''Džon Devis Keil''' ({{lang-en|John Davies Cale}}; sünd. [[9. keväz'ku]] [[1942]], [[Garnant]], [[Karmartenšir]], [[Uel's]], [[Sur' Britanii]]) om britanijalaine (uel'salaine) pajatai, muzikan vändai äjil instrumentil, muzikankirjutai da prodüser. Oli «[[The Velvet Underground]]»:an ühtnii (vhesai [[1968. voz'|1968]]).
+'''Džon Devis Keil''' ({{lang-en|John Davies Cale}}; sünd. [[9. keväz'ku]] [[1942]], [[Garnant]], [[Karmartenšir]], [[Uel's]], [[Sur' Britanii]]) om britanine (uel'salaine) pajatai, muzikan vändai äjil instrumentil, muzikankirjutai da prodüser.
+
+== Biografii ==
+Mez' openui vändole soitoil lapsessai. Täuz'kaznuden gastrolirui Sures Britanijas, sirdi elämhä [[Amerikan Ühtenzoittud Valdkundad|AÜV:oihe]]. Vl 1965 pani «[[The Velvet Underground]]»-rokgruppan alust [[Lu Rid]]anke ühtes, no läksi gruppaspäi kahten al'boman jäl'ghe Ridan erižmel'žusiden tagut vl [[1968. voz'|1968]].
+
+Džon Keil zavodi solišt kar'jerad, tegi änetusid toižidenke muzikantoidenke, oli estradan muzikal'bomoiden prodüseran hätken. Ühtni The Velvet Underground-gruppan toštmižsündundha vspäi 1993.
 
 == Homaičendad ==
 <references />
