--- a/Fines_da_Ferb.mw
+++ b/Fines_da_Ferb.mw
@@ -1,7 +1,7 @@
 '''«Fines da Ferb»''' ({{lang-en|Phineas and Ferb}}) om [[Amerikan Ühtenzoittud Valdkundad|amerikaine]] mul'tiplikacine muzikserial komedijan žanras. Serialas om 4 sezonad, kaik om 222 epizodad vai 135 serijad. Om tehtud amerikaižen «Disney Channel»-kanalan täht anglijan kelel, läksi ekranoile vozil 2007−2015. Om ozutadud [[Venäma]]s vozil 2010−2015 ([[STS]]- da Disnei-telekanalad).
 
 == Roliden änetoitand ==
-* ''Fines Flinn'' — [[Martella Vinsent|Vinsent Martella]]
+* ''Fines Flinn'' — Vinsent Martella
 * ''Ferb Flečer'' — Tomas Sangster
 * ''Kendis Flinn'' — Ešli Tisdeil
 * ''Heinc Dufenšmirc-lekar' '' — Den Povenmair
