--- a/Mesill.mw
+++ b/Mesill.mw
@@ -13,11 +13,15 @@
  | Telefonkod = +1-575
  | Aigvö = tal'vel [[UTC]]−7,<br />kezal [[UTC]]−6
 }}
-'''Mesill''' ({{lang-en|Mesilla}}, {{lang-es|La Mesilla}}) om [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] lidn [[Nju Meksiko]]-štatan suves, [[Las Kruses]]-lidnan suvine ezilidn. Mülüb Donja Ana-ümbrikho.
+'''Mesill''' ({{lang-en|Mesilla}}, {{lang-es|La Mesilla}}) om [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] lidn (angl. ''town'') [[Nju Meksiko]]-štatan suves, [[Las Kruses]]-lidnan suvine ezilidn. Mülüb Donja Ana-ümbrikho.
 
-Oficialine status om anttud eländpunktale vl 1848, ani sodan Meksikad vaste jäl'ghe. Tirpi londoid [[apači]]-indejalaižiden polespäi 1850-nzil vozil.
+== Istorii ==
+Oficialine status om anttud eländpunktale vl 1848, ani sodan Meksikad vaste jäl'ghe. Tirpi londoid [[apači]]-indejalaižiden polespäi 1850-nzil vozil. [[Rahvahanikoiden soda AÜV:oiš|Rahvahanikoiden sodan]] aigan kaks' torad oli Mesillanno, i se oli [[Arizon (territorii, AKV)|Arizon]]-territorijan pälidnaks Amerikan Konfederativižiš Štatoiš vll 1861–1862.
 
-Lidn sijadase ümbrikon keskuzpalas, 1183 m ü.m.t. keskmäižel korktusel.
+Mesillan ristitišt radab tervhudenkaičendan, opendusen i ohjandusen sferiš päpaloin.
+
+== Geografijan andmused ==
+Lidn sijadase ümbrikon keskuzpalas, 1183 m ü.m.t. keskmäižel korktusel. [[Rio Grande]]-jogi jokseb päivlaskmha lidnaspäi.
 
 Vn 2010 AÜV:oiden rahvahanlugemižen mödhe lidnan eläjiden lugu oli 2 196 ristitud, se oli kaikiš suremb ristitišt.
 
