*Empty MediaWiki Message*

--- a/Goi_Dero.mw
+++ b/Goi_Dero.mw
@@ -2,9 +2,9 @@
 | изображение = Dero (OOMPH!) at Ruisrock 2006.jpg
 | описание изображения = Dero ''Ruisrock-2006''-aigtegol, [[Turku]], [[Suomenma]]
 }}
-'''Dero Goi''' vai vaiše '''Dero''' ({{lang-de|Dero Goi}}), todesine nimi om '''Štefan Muziol' ''' ({{lang-de|Stephan Muziol}}; sünd. [[16. sulaku]] [[1970]], [[Vol'fsburg]], [[Alasaksonii]], [[Germanii]]) om [[Germanii|germanijalaine]] muzikant, runokirjutai da kirjutai, [[Oomph!]]-muzikgruppan alusenpanii, vokalist i bangsoitoiden vändai vll 1989−2021, sen What About Bill?-saidprojektan ühtnii.
+'''Dero Goi''' vai vaiše '''Dero''' ({{lang-de|Dero Goi}}), todesine nimi om '''Štefan Muziol' ''' ({{lang-de|Stephan Muziol}}; sünd. [[16. sulaku]] [[1970]], [[Vol'fsburg]], [[Alasaksonii]], [[Germanii]]) om [[Germanii|germanijalaine]] muzikant, runokirjutai da kirjutai, [[Oomph!]]-muzikgruppan alusenpanii, vokalist i bangsoitoiden vändai vll 1989−2021, sen What About Bill?-saidprojektan ühtnii vspäi 2008.
 
-Mez' pajatab Die Kreatur-duetas, vajehtab imidžad paksus.
+Mez' pajatab Die Kreatur-duetas Kris Harmsanke vspäi 2019, vajehtab imidžad paksus.
 
 == Homaičendad ==
 <references />
