--- a/Göte_Johan_Vol'fgang_fon.mw
+++ b/Göte_Johan_Vol'fgang_fon.mw
@@ -3,7 +3,26 @@
 | изображение = Goethe (Stieler 1828).jpg
 | описание изображения = Göte. Štiler-pirdajal sätud portret, 1828
 }}
-'''Johan Vol'fgang fon Göte''' ({{lang-de|Johann Wolfgang von Goethe}}; sünd. 28. eloku 1749, [[Frankfurt Mainal]], [[Saksanma]] — kol. 22. keväz'ku 1832, [[Veimar]], [[Saksanma]]) — germanijalaine runokirjutai, kirjutai, valdkundan šingotai, meletai da londusentedoidai.
+'''Johan Vol'fgang fon Göte''' ({{lang-de|Johann Wolfgang von Goethe}}; sünd. 28. eloku 1749, [[Frankfurt Mainal]], [[Saksanma]] — kol. 22. keväz'ku 1832, [[Veimar]], Saksanma) — germanijalaine runokirjutai, kirjutai, valdkundan šingotai, meletai da londusentedoidai.
+
+Kirjutajan sädamižjäl'guz tedoidase Veimar-lidnan Göten i Šilleran arhivas.
+
+== Sädused ==
+* «Saksalaižes sauvondas» (1773)
+* «Göc fon Berlihingen»-p'jes (1774)
+* «Klavigo» (1774)
+* «Noren Verteran mokičendad»-roman (1774)
+* «Ifigenija Tavridas» (1779−1788)
+* «Torkvato Tasso» (1780−1789)
+* «Mecan car'»-ballad (1782)
+* «Egmont»-tragedii (1788)
+* «Mahtod kazmusiden metamorfozas» (1790)
+* «Reineke-ižareboi» (1792, {{lang-de|Reineke Fuchs}})
+* «German i Doroteja», (1794, ''Hermann und Dorothea'')
+* «Faust»-tragedii (1774−1832)
+* «Mujun teorijale» (1810, ''Zur Farbenlehre'')
+* «Päivlaskmaiž-päivnoizmaine divan» (1819, ''West-östlicher Divan'')
+* «Runoišt i tozi» (avtobiografine säduz, 1811−1831)
 
 == Homaičendad ==
 <references/>
