--- a/Göte_Johan_Vol'fgang_fon.mw
+++ b/Göte_Johan_Vol'fgang_fon.mw
@@ -3,7 +3,7 @@
 | изображение = Goethe (Stieler 1828).jpg
 | описание изображения = Göte. Štiler-pirdajal sätud portret, 1828
 }}
-'''Johan Vol'fgang fon Göte''' ({{lang-de|Johann Wolfgang von Goethe}}; sünd. 28. eloku 1749, [[Frankfurt Mainal]], [[Saksanma]] — kol. 22. keväz'ku 1832, [[Veimar]], Saksanma) — germanijalaine runokirjutai, kirjutai, valdkundan šingotai, meletai da londusentedoidai.
+'''Johan Vol'fgang fon Göte''' ({{lang-de|Johann Wolfgang von Goethe}} [ˈjoːhan ˈvɔlfɡaŋ fɔn ˈɡøːtə]; sünd. 28. eloku 1749, [[Frankfurt Mainal]], [[Pühä Rimalaine imperii]] — kol. 22. keväz'ku 1832, [[Veimar]], [[Saksen-Veimar-Eizenaht]]-ruhtinazkund) oli germanijalaine runokirjutai, kirjutai, valdkundan šingotai, meletai da londusentedoidai.
 
 Kirjutajan sädamižjäl'guz tedoidase Veimar-lidnan Göten i Šilleran arhivas.
 
