--- a/Göte_Johan_Vol'fgang_fon.mw
+++ b/Göte_Johan_Vol'fgang_fon.mw
@@ -8,12 +8,12 @@
 Kirjutajan sädamižjäl'guz tedoidase Veimar-lidnan Göten i Šilleran arhivas.
 
 == Sädused ==
-* «Saksalaižes sauvondas» (1773)
+* «Saksalaižes sauvondas»-kirjutuz (1773, {{lang-de|Von deutscher Baukunst}})
 * «Göc fon Berlihingen»-p'jes (1774)
 * «Klavigo» (1774)
 * «Noren Verteran mokičendad»-roman (1774)
 * «Ifigenija Tavridas» (1779−1788)
-* «Torkvato Tasso» (1780−1789)
+* «Torkvato Tasso»-dram (1780−1789)
 * «Mecan car'»-ballad (1782)
 * «Egmont»-tragedii (1788)
 * «Mahtod kazmusiden metamorfozas» (1790)
