--- a/Göte_Johan_Vol'fgang_fon.mw
+++ b/Göte_Johan_Vol'fgang_fon.mw
@@ -9,8 +9,8 @@ Kirjutajan sädamižjäl'guz tedoidase Veimar-lidnan Göten i Šilleran arhivas.
 
 == Sädused ==
 * «Saksalaižes sauvondas»-kirjutuz (1773, {{lang-de|Von deutscher Baukunst}})
-* «Göc fon Berlihingen»-p'jes (1774)
-* «Klavigo» (1774)
+* «Göc fon Berlihingen»-komedii (1774, ''Götz von Berlichingen'')
+* «Klavigo»-dram (1774, ''Clavigo'')
 * «Noren Verteran mokičendad»-roman (1774)
 * «Ifigenija Tavridas» (1779−1788)
 * «Torkvato Tasso»-dram (1780−1789)
