--- a/Göte_Johan_Vol'fgang_fon.mw
+++ b/Göte_Johan_Vol'fgang_fon.mw
@@ -11,15 +11,15 @@ Kirjutajan sädamižjäl'guz tedoidase Veimar-lidnan Göten i Šilleran arhivas.
 * «Saksalaižes sauvondas»-kirjutuz (1773, {{lang-de|Von deutscher Baukunst}})
 * «Göc fon Berlihingen»-komedii (1774, ''Götz von Berlichingen'')
 * «Klavigo»-dram (1774, ''Clavigo'')
-* «Noren Verteran mokičendad»-roman (1774)
+* «Noren Verteran mokičendad»-roman (1774, ''Die Leiden des jungen Werthers'')
 * «Ifigenija Tavridas» (1779−1788)
 * «Torkvato Tasso»-dram (1780−1789)
 * «Mecan car'»-ballad (1782)
-* «Egmont»-tragedii (1788)
+* «Egmont»-tragedii (1788, ''Egmont'')
 * «Mahtod kazmusiden metamorfozas» (1790)
 * «Reineke-ižareboi» (1792, {{lang-de|Reineke Fuchs}})
 * «German i Doroteja», (1794, ''Hermann und Dorothea'')
-* «Faust»-tragedii (1774−1832)
+* «Faust»-tragedii (1774−1832, ''Faust'')
 * «Mujun teorijale» (1810, ''Zur Farbenlehre'')
 * «Päivlaskmaiž-päivnoizmaine divan» (1819, ''West-östlicher Divan'')
 * «Runoišt i tozi» (avtobiografine säduz, 1811−1831)
