--- a/Göte_Johan_Vol'fgang_fon.mw
+++ b/Göte_Johan_Vol'fgang_fon.mw
@@ -16,13 +16,13 @@ Kirjutajan sädamižjäl'guz tedoidase Veimar-lidnan Göten i Šilleran arhivas.
 * «Torkvato Tasso»-dram (1780−1789)
 * «Mecan car'»-ballad (1782)
 * «Egmont»-tragedii (1788, ''Egmont'')
-* «Mahtod kazmusiden metamorfozas» (1790)
-* «Reineke-ižareboi» (1792, {{lang-de|Reineke Fuchs}})
+* «Mahtod kazmusiden metamorfozas»-tedotö (1790, ''Versuch die Metamorphose der Pflanzen zu erklären'')
+* «Reineke-ižareboi» (1792, ''Reineke Fuchs'')
 * «German i Doroteja», (1794, ''Hermann und Dorothea'')
 * «Faust»-tragedii (1774−1832, ''Faust'')
 * «Mujun teorijale» (1810, ''Zur Farbenlehre'')
 * «Päivlaskmaiž-päivnoizmaine divan» (1819, ''West-östlicher Divan'')
-* «Runoišt i tozi» (avtobiografine säduz, 1811−1831)
+* «Runoišt i tozi: minun elospäi» (avtobiografine säduz, 1811−1831)
 
 == Homaičendad ==
 <references/>
