--- a/Göte_Johan_Vol'fgang_fon.mw
+++ b/Göte_Johan_Vol'fgang_fon.mw
@@ -12,15 +12,15 @@ Kirjutajan sädamižjäl'guz tedoidase Veimar-lidnan Göten i Šilleran arhivas.
 * «Göc fon Berlihingen»-komedii (1774, ''Götz von Berlichingen'')
 * «Klavigo»-dram (1774, ''Clavigo'')
 * «Noren Verteran mokičendad»-roman (1774, ''Die Leiden des jungen Werthers'')
-* «Ifigenija Tavridas» (1779−1788)
-* «Torkvato Tasso»-dram (1780−1789)
+* «Ifigenija Tavridas»-tragedii (1779−1788, ''Iphigenie auf Tauris'')
+* «Torkvato Tasso»-dram (1780−1789, ''Torquato Tasso'')
 * «Mecan car'»-ballad (1782, ''Erlkönig'')
 * «Egmont»-tragedii (1788, ''Egmont'')
 * «Mahtod kazmusiden metamorfozas»-tedotö (1790, ''Versuch die Metamorphose der Pflanzen zu erklären'')
 * «Reineke-ižareboi» (1792, ''Reineke Fuchs'')
 * «German i Doroteja», (1794, ''Hermann und Dorothea'')
 * «Faust»-tragedii (1774−1832, ''Faust'')
-* «Mujun teorijale» (1810, ''Zur Farbenlehre'')
+* «Mujun teorijale»-esse (1810, ''Zur Farbenlehre'')
 * «Päivlaskmaiž-päivnoizmaine divan» (1819, ''West-östlicher Divan'')
 * «Runoišt i tozi: minun elospäi» (avtobiografine säduz, 1811−1831, ''Aus meinem Leben. Dichtung und Wahrheit'')
 
