*Empty MediaWiki Message*

--- a/Kasimov.mw
+++ b/Kasimov.mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = Kasimov<br />Касимов
- | Lidnanznam = Coat of Arms of Kasimov (Ryazan oblast).png
+ | Lidnanznam = Kasimov city coa.jpg
  | Flag = Flag of Kasimov (Ryazan oblast).png
  | Lidnanznam text = Kasimovan lidnanznam
  | Flag text = Kasimovan flag
