--- a/Bodaibo_(lidn).mw
+++ b/Bodaibo_(lidn).mw
@@ -19,7 +19,7 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1864 samha [[kuld]]ad kuti ''Bodaibon rezidencii'' ({{lang-ru|Бодайбинская резиденция}}) — jüguiden varažom. Nimitihe Bodaibo-jogen mödhe (vai ven. ''Бодайбинка'', 98 km pitte, lankteb Vitimha). Bodaibon alangišt oli kuldan samižen päsijaks avoinuden mahtusel. Žilo sai lidnan statusad nügüdläiženke nimenke vl 1903, mülüi Jakutskan gubernijha. Vll 1864−1967 kaidraižuine raudte oli olmas pohjoižpäivnouzmha, kuldan samižen žiloidennoks, avtote om saudud sen sijas.
 
-Lidn šingotase Mamakanan GES:al, kuldan sezonižen samižen edheotandoil, jogiportal i sömtegimištol (lihan i leibän edheotandad).
+Bodaibo šingotase Mamakanan GES:al, kuldan sezonižen samižen edheotandoil, jogiportal i sömtegimištol (lihan i leibän edheotandad).
 
 == Geografijan andmused ==
 Lidn sijadase [[Vitim]]-jogen oiktal randal ({{lang-ru|Витим}}, [[Len (jogi)|Lenan]] oigedpol'ne bassein), 280 m ü.m.t. keskmäižel korktusel. Matkad [[Irkutsk]]hasai om 883 km suvipäivlaskmha orhal vai 1435 km avtotedme. Lähembaižed lidnad oma [[Lensk]] 321 km pohjoižhe orhal i [[Severobaikal'sk]] 386 km suvipäivnouzmha orhal vai 627 km avtol. Lähembaine raudtestancii om BAM:an [[Taksimo]] suvhe, ühtenzoittas avtotel 240 km pitte, avtotesild Vitiman kal't om sauvomas vodele 2025. Voib sadas Irkutskhasai regionaližen lendimportan kal't (''ODO / БДБ'', 9 reisad nedališ).
@@ -32,6 +32,15 @@ Nerpo-žilo (6 rist. vl 2017) mülüb lidnankundha Bodaibon ližaks. Lidnankunda
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 15 340 ristitud, lidnankundan — 15 358 ristitud. Kaikiš suremb lidnan ristitišt oli 18 226 eläjad vl 1959 i 21 700 eläjad vl 1992. Ristitišt poleneb kacmata kuldan samižen ližadushe.
 
 Bodaibon kaivuztehnikum om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Здание администрации района - panoramio.jpg|Bodaibon rajonan administracijan sauvuz (2007)
+Бодайбо доска памяти героям.jpg|Muštnik i muštlaudad Suran sodan vägimehile, vn 2016 nägu
+Лензолото - panoramio.jpg|«Lenzoloto»-kompanijan kontor vl 2010
+Бодайбинская средняя школа №1 - panoramio.jpg|Keskškol nomer 1 (2007)
+Аэропорт Бодайбо вид с высоты.jpg|Bodaibo-lendimportan ühthine nägu vl 2006
+</gallery>
 
 == Irdkosketused ==
 * [http://www.uprava-bodaibo.ru/ Bodaibon municipaližen ühtnikan oficialine sait (''uprava-bodaibo.ru'').] {{ref-ru}}
