*Empty MediaWiki Message*

--- a/Bodaibo_(lidn).mw
+++ b/Bodaibo_(lidn).mw
@@ -36,7 +36,7 @@ Bodaibon kaivuztehnikum om professionaližen opendusen aluzkundaks.
 == Galerei ==
 <gallery mode="packed" heights="125px">
 Здание администрации района - panoramio.jpg|Bodaibon rajonan administracijan sauvuz (2007)
-Бодайбо доска памяти героям.jpg|Muštnik i muštlaudad Suran sodan vägimehile, vn 2016 nägu
+Бодайбо доска памяти героям.jpg|Muštnik i muštlaudad [[Sur' Tatanmaine soda|Suren sodan]] vägimehile, vn 2016 nägu
 Лензолото - panoramio.jpg|«Lenzoloto»-kompanijan kontor vl 2010
 Бодайбинская средняя школа №1 - panoramio.jpg|Keskškol nomer 1 (2007)
 Аэропорт Бодайбо вид с высоты.jpg|Bodaibo-lendimportan ühthine nägu vl 2006
