--- a/Šelehov_(lidn).mw
+++ b/Šelehov_(lidn).mw
@@ -17,19 +17,30 @@
 '''Šelehov''' ({{lang-ru|Шелехов}}) om [[Venäma]]n lidn da lidnankund [[Irkutskan agj]]an suves. Se om [[Irkutsk]]an suvipäivlaskmaine ezilidn, [[Šelehovan rajon]]an administrativine keskuz, mülüb sihe vspäi 2009.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1953 kuti ''žilo Irkutskan alüminijantegimenno'' sauvomha tegint. Vl 1956 nimitihe sidä nügüdläižikš Grigorii Šelihov (Šelehov) torgovanan kanzannimen mödhe (1747−1795), Venälaiž-Amerikaižen torguindkompanijan alusenpanii. Vl 1962 tegim radaškanzi, i žilo sai lidnan statusad. Torhuz — alüminijan hapanduz, ajadas [[Ačinsk]]aspäi, Uralaspäi, Kazahstanaspäi. Lähine elektropurde — Irkutskan GES.
+Eländpunktan aluz om pandud vl 1953 kuti ''žilo Irkutskan alüminijantegimenno'' sauvomha tegint. Vl 1956 nimitihe sidä nügüdläižikš Grigorii Šelihov (Šelehov) torgovanan kanzannimen mödhe (1747−1795), Venälaiž-Amerikaižen torguindkompanijan alusenpanii. Vl 1962 tegim radaškanzi, i žilo sai lidnan statusad. Sen torhuz om alüminijan hapanduz, ajadas [[Ačinsk]]aspäi, Uralaspäi, Kazahstanaspäi. Lähine elektropurde — Irkutskan GES.
 
-Lidn šingotase [[alüminii|alüminijan]] pästandal i sauvondmaterialiden edheotandal (raudbetonkonstrukcijad), mugažo kabel'tegim radab.
+Šelehov šingotase [[alüminii|alüminijan]] pästandal i sauvondmaterialiden edheotandal (raudbetonkonstrukcijad), mugažo kabel'tegim radab.
 
 == Geografijan andmused ==
 Lidn sijadase Irkut-jogen oiktal randpolel, 462 m ü.m.t. keskmäižel korktusel. Matkad [[Irkutsk]]an röunhasai om 7 km pohjoižpäivnouzmha orhal. [[Transsib]] läbitab lidnad, päraudtestancii om ''Gončarovo''. «Baikal»-avtote ristikoičeb lidnad. Voib olda lujid manrehkaidusid (10 ballhasai 12:späi).
 
-Šelehov om lidnankundan üks'jäine eländpunkt. Lidn jagase fartaloihe da mikrorajonihe, mugažo om äi kezaküläpertiden žiloid.
+Šelehov om lidnankundan üks'jäine eländpunkt. Lidn jagase fartaloikš da mikrorajonikš, mugažo om äi kezaküläpertiden žiloid.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 47 943 ristitud, rajonan koume nelländest. Kaikiš suremb lidnan ristitišt oli 55 100 eläjad vl 2001. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] phh. Pedran da Pauloin jumalanpert' om saudud vll 2000−2018.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 47 943 ristitud, rajonan koume nelländest. Kaikiš suremb lidnan ristitišt oli 55 100 eläjad vl 2001.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] phh. Pedroin da Pauloin jumalanpert' om saudud vll 2000−2018.
 
 Irkutskan arhitekturan da sauvondan tehnikuman filial om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Шелехов (город).jpg|Keskuzline-mikrorajon (2015, {{lang-ru|Центральный}})
+Храм Святых апостолов Петра и Павла.jpg|Phh. Pedroin da Pauloin jumalanpert', päkumplon libutand vl 2014
+IrkAZ 26.07.2013.jpg|Irkutskan alüminijantegim vl 2013
+Стадион "Строитель".JPG|«Stroitel'»-stadion (2014, ''Sauvoi'')
+ВЛ85-011 ст.Гончарово.jpg|Gončarovo-raudtestancii vl 2013
+</gallery>
 
 == Irdkosketused ==
 * [http://www.gorod-shelehov.ru/ Lidnan municipaližen ühtnikan tobmuden oficialine sait (''gorod-shelehov.ru'').] {{ref-ru}}
