--- a/Saksan_kel'.mw
+++ b/Saksan_kel'.mw
@@ -3,8 +3,9 @@
 [[Fail:Deutsche Dialekte.PNG|thumb|right|400px|Dialektan kart]]
 '''Saksan kel'''' vai '''Germanijan kel'''' (ičeze nimituz: ''Deutsch, deutsche Sprache'') om valdkundkel' [[Saksanma]]s, [[Avstrii|Avstrijas]], [[Lihtenštein]]as, [[Lüksemburg]]as, [[Šveicarii|Šveicarijas]], [[Belgii|Belgijas]] da kaikes [[Evropan Ühtištuz|EÜ:s]]. Pagižijoiden lugu — 90 mln ristituid.
 
-Molembad kelen reguliruindorganzacijad sijadasoiš [[Manheim]]-lidnas (Saksanma):
+Kirjkel' om [[latinan kirjamišt]]on pohjal, ližatihe koume grafemad umlautoiden täht (ä, ö, ü) i [[escet]]-ligaturad (ß). Kelen kaikiš amuižembad kirjutadud dokumentad datiruišoiš 8. voz'sadal. Nügüd'aigaine saksan kirjankel' šingotase 17. voz'sadan kahtes polespäi, om sündnus üläsaksan paginoišpäi.
 
+Kelen molembad reguliruindorganzacijad sijadasoiš [[Manheim]]-lidnas (Saksanma):
 * Saksan kelen institut (''Institut für Deutsche Sprache, IDS'', vspäi 1964);
 * rahvahidenkeskeine — Nevondkund saksan oigedkirjutamižes (''Rat für deutsche Rechtschreibung, RDR'', vspäi 2004).
 
