--- a/Saksan_kel'.mw
+++ b/Saksan_kel'.mw
@@ -1,9 +1,9 @@
 {{1000}}{{A10000}}
 [[Fail:Vereinfachte Ausgangsschrift.png|thumb|right|250px|Saksan kirjamišt]]
 [[Fail:Deutsche Dialekte.PNG|thumb|right|400px|Dialektan kart]]
-'''Saksan kel'''' vai '''Germanijan kel'''' (ičeze nimituz: ''Deutsch, deutsche Sprache'') om valdkundkel' [[Saksanma]]s, [[Avstrii|Avstrijas]], [[Lihtenštein]]as, [[Lüksemburg]]as, [[Šveicarii|Šveicarijas]], [[Belgii|Belgijas]] da kaikes [[Evropan Ühtištuz|EÜ:s]]. Pagižijoiden lugu — 90 mln ristituid.
+'''Saksan kel'''' vai '''Germanijan kel'''' (ičeze nimituz: ''Deutsch'' [ˈdɔʏ̯tʃ], ''deutsche Sprache'' [ˈdɔʏ̯tʃə ˈʃpʁaːχə]) om valdkundkel' [[Saksanma]]s, [[Avstrii|Avstrijas]], [[Lihtenštein]]as, üks' valdkundkelišpäi [[Lüksemburg]]as, [[Šveicarii|Šveicarijas]], [[Belgii|Belgijas]] da kaikes [[Evropan Ühtištuz|EÜ:s]]. Pagižijoiden lugu — 90 mln ristituid. Mülütadas [[indoevropine kel'kund|indoevropižen kel'kundan]] [[germanižed keled|germanižiden keliden]] päivlaskmaižhe gruppha.
 
-Kirjkel' om [[latinan kirjamišt]]on pohjal, ližatihe koume grafemad umlautoiden täht (ä, ö, ü) i [[escet]]-ligaturad (ß). Kelen kaikiš amuižembad kirjutadud dokumentad datiruišoiš 8. voz'sadal. Nügüd'aigaine saksan kirjankel' šingotase 17. voz'sadan kahtes polespäi, om sündnus üläsaksan paginoišpäi.
+Kirjkel' om [[latinan kirjamišt]]on pohjal, ližatihe koume grafemad umlautoiden täht (ä, ö, ü) i [[escet]]-ligaturad (ß). Kelen kaikiš amuižembad kirjutadud dokumentad datiruišoiš 8. voz'sadal. Nügüd'aigaine saksan kirjankel' šingotase 17. voz'sadan kahtes polespäi, om sündnus päivnouzmaižes kesksaksan paginaspäi. Ičeze saksan kirjankelen standart om kaikuččes koumes valdkundaspäi: Saksanma, Avstrii i Šveicarii. [[Gannover]]an ümbrištonke eläjad pagištas kaikiš lähižemb Saksanman saksan kirjankelen standartannoks.
 
 Kelen molembad reguliruindorganzacijad sijadasoiš [[Manheim]]-lidnas (Saksanma):
 * Saksan kelen institut (''Institut für Deutsche Sprache, IDS'', vspäi 1964);
