--- a/Gaidai_Leonid.mw
+++ b/Gaidai_Leonid.mw
@@ -2,7 +2,7 @@
 | изображение = Леонид Иович Гайдай.jpg
 | описание изображения = Leonid Gaidai vl 1942
 }}
-'''Leonid Iovič Gaidai''' ({{lang-ru|Леонид Иович Гайдай}}; sünd. [[30. viluku]] [[1923]], [[Svobodnii (Amuran agj)]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]] — kol. [[19. kül'mku]] [[1993]], [[Moskv]], [[Venäma]]) oli tetab [[Nevondkundaline Ühtištuz|nevondkundaline]] režissör, kinotarinantegii i akt'or. Sai NSTÜ:n rahvahan artist-arvod vl 1989.
+'''Leonid Iovič Gaidai''' ({{lang-ru|Леонид Иович Гайдай}}; sünd. [[30. viluku]] [[1923]], [[Svobodnii (Amuran agj)]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]] — kol. [[19. kül'mku]] [[1993]], [[Moskv]], [[Venäma]]) oli tetab [[Nevondkundaline Ühtištuz|nevondkundaline]] režissör, kinoscenarist i akt'or. Sai NSTÜ:n rahvahan artist-arvod vl 1989.
 
 == Biografii ==
 Tuleban aigan režissör oli sündnu raudteradnikan kanzha koumandeks poigaks. Kanz sirdi [[Čit]]ha, sid' [[Irkutsk]]an ezilidnha.
@@ -36,10 +36,10 @@ Mez' ühthi [[Toine mail'man soda|Toižhe mail'man sodha]]. Vl 1947 oli pastnika
 
 [[Kategorii:Leonid Gaidai| ]]
 [[Kategorii:NSTÜ:n režissörad]]
-[[Kategorii:NSTÜ:n kinotarinantegijad]]
+[[Kategorii:NSTÜ:n kinoscenaristad]]
 [[Kategorii:NSTÜ:n akt'orad]]
 [[Kategorii:Akt'orad kirjamišton mödhe]]
-[[Kategorii:Kinotarinantegijad kirjamišton mödhe]]
+[[Kategorii:Scenaristad kirjamišton mödhe]]
 [[Kategorii:Režissörad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
 [[Kategorii:Sündnuded Amuran agjaha]]
