--- a/Gaidai_Leonid.mw
+++ b/Gaidai_Leonid.mw
@@ -36,7 +36,8 @@ Mez' ühthi [[Toine mail'man soda|Toižhe mail'man sodha]]. Vl 1947 oli pastnika
 
 [[Kategorii:Leonid Gaidai| ]]
 [[Kategorii:NSTÜ:n režissörad]]
-[[Kategorii:NSTÜ:n kinoscenaristad]]
+[[Kategorii:NSTÜ:n scenaristad]]
+[[Kategorii:Kinoscenaristad]]
 [[Kategorii:NSTÜ:n akt'orad]]
 [[Kategorii:Akt'orad kirjamišton mödhe]]
 [[Kategorii:Scenaristad kirjamišton mödhe]]
