--- a/Azerbaidžanan_valdkundznam.mw
+++ b/Azerbaidžanan_valdkundznam.mw
@@ -1,8 +1,11 @@
 [[Fail:Coat of arms of Azerbaijan.svg|right|250px]]
-'''Azerbaidžanan valdkundznam''' ({{lang-az|Azərbaycan gerbi}}) om [[Azerbaidžanan Tazovaldkund]]an üks' oficialižiš simvolišpäi. Se om vahvištadud [[1993]]-nden voden 19. päiväl vilukud.
+'''Azerbaidžanan valdkundznam''' ({{lang-az|Azərbaycan gerbi}}) om [[Azerbaidžanan Tazovaldkund]]an üks' oficialižiš simvolišpäi. Sen mujukaz i monohromine versijad oma vahvištadud Konstitucijal [[1993]]-nden voden 19. päiväl vilukud. «Käskuz Azerbaidžanan Tazovaldkundan valdkundznamas» om allekirjutadud Azerbaidžanan [[Abul'faz El'čibei]]-prezidental sen-žo voden 23. uhokud.
 
 == Ümbrikirjutand ==
 Kahesaagjaine vauged tähtaz kuvadase Päivnouzmman kehkran laudan keskuses i simvolizuruib päiväšt. Agjad oma kahesa türkišt rahvast. Vauged muju ozutab tünüt da kožundad. Leskuz om «Lämoiden man» znam — tahond kivivoin da sen gazan löudmižsijidenke. [[Azerbaidžanan flag]]an mujud ümbärtas tähtast. Kirb' alahan kogoneb [[nižu]]n tähkišpäi (elokahuz, kazvateližuz) i [[tamm]]an oksišpäi (vägi, vahvuz).
+
+== Homaičendad ==
+<references />
 
 {{Commons|Category:Coats of arms of Azerbaijan}}
 
