--- a/Monakolaižed.mw
+++ b/Monakolaižed.mw
@@ -1,6 +1,6 @@
 '''Monakolaižed''' ([[monakon dialekt|monak]].: ''munegàsche'', {{lang-fr|monégasque}}) oma [[indoevropalaižed rahvahad|indoevropalaine]], [[romanižed rahvahad|romanine]] rahvaz.
 
-Elädas tobjimalaz [[Monako]]s. Monakolaižed pagištas [[monakon dialekt]]al ([[italijan kel'|italijan kelen]] üks' [[ligurijan dialekt]]oišpäi). Rahvahan lugumär om 7634 ristitud (2008), ruhtinazkundan videndez.
+Elädas [[Monako]]s tobjimalaz. Monakolaižed pagištas [[monakon dialekt]]al ([[italijan kel'|italijan kelen]] üks' [[ligurijan dialekt]]oišpäi), aigemba levitadud [[oksitanan kel'|oksitanan kelen]] niccan pagin (''Niçard'') valatoiti monakon paginha lujas. Rahvahan lugumär om 7634 ristitud (2008), ruhtinazkundan videndez. Sihe kacmata, valičendoiden parlamentha aigan änen oiktuz om monakolaižil vaiše, om toižid-ki privilegijoid, oz., eländsijan kortomas. «[[Veren oiktuz]]» om väges, kuti erasiš-se toižiš maiš: ku hot' tat om monakolaine, ka laps' sab Monakon rahvahanikust avtomatižikš tulendata Monakho ičeze elos eskai.
 
 Rahvahan augotižlibund om erazvuitte. [[Finikijalaižed]] tuliba Monakon randištole 10. voz'sadal EME. [[Grekalaižed]] paniba Gerkulesan portan da pühäpertin alust 5. voz'sadal EME. [[Genui|Genujan]] Grimal'di-feodaloiden ezitajad eläškanziba necil Ligurijan randištol 13. voz'sadan lopus i vediba [[italijalaižed|italijalaižid]] ičezenke.
 
