--- a/Džugu.mw
+++ b/Džugu.mw
@@ -9,17 +9,31 @@
  | Voz' = 2012
  | Pind = 
  | Fail = Straßenbild djougou.JPG
- | Pämez' = 
+ | Pämez' = Malik Gomina<br />(kezaku 2020—,<br />''Malick Gomina'')
  | Telefonkod = +229-
  | Aigvö = [[UTC]]+1
 }}
 '''Džugu''' ({{lang-fr|Djougou}}) om lidn da kommun [[Benin]]an lodehes. Se om valdkundan nellänz' lidn eläjiden lugun mödhe, [[Dong (agj)|Dong-agjan]] administrativine keskuz.
 
+== Ižanduz ==
 Džugu šingotase kommunan torguindlidnaks da avtoteiden ristaks, nahkan ümbriradmižel, kanghiden tehmižel, pästtas konorüzid diamantoiden täht.
 
-Lidn sijadase 430 m ü.m.t. keskmäižel korktusel. Om ümbärtud maižanduzrajonal.
+Sijaližed sarakoližed torguindassociacijad baziruišoiš lidnas.
 
-Vn 2012 Beninan rahvahanlugemižen mödhe kommunan eläjiden lugu oli 237 040 ristitud 3966 km² pindal. Eläjiden tobj pala om [[islam|islamanuskojad]], mugažo om äi [[katoline jumalankodikund|katolikoid]].
+== Geografijan andmused ==
+Lidn sijadase agjan pohjoižpalas, 421 m ü.m.t. keskmäižel korktusel. Om ümbärtud maižanduzrajonal.
+
+Äiluguižed ezilidnad ümbärtas lidnad.
+
+== Eläjad ==
+Vn 2012 Beninan rahvahanlugemižen mödhe kommunan eläjiden lugu oli 237 040 ristitud 3966 km² pindal.
+
+Eläjiden tobj pala om [[islam|islamanuskojad]], mugažo om äi [[katoline jumalankodikund|katolikoid]] (päjumalanpert', konvent, seminarii, katoližed keskškolad).
+
+Kaks' kundališt tervhuden keskust i privatine läžundkodi ratas lidnas.
+
+== Homaičendad ==
+<references />
 
 {{Commons|Category:Djougou}}
 
