*Empty MediaWiki Message*

--- a/Džugu.mw
+++ b/Džugu.mw
@@ -26,7 +26,7 @@ Lidn sijadase agjan pohjoižpalas, 421 m ü.m.t. keskmäižel korktusel. Om ümb
 Äiluguižed ezilidnad ümbärtas lidnad.
 
 == Eläjad ==
-Vn 2012 Beninan rahvahanlugemižen mödhe kommunan eläjiden lugu oli 237 040 ristitud 3966 km² pindal.
+Vn 2012 Beninan rahvahanlugemižen mödhe kommunan eläjiden lugu oli 237 040 ristitud 3966 km² pindal. Ristitišt om nor', ližadub teravas.
 
 Eläjiden tobj pala om [[islam|islamanuskojad]], mugažo om äi [[katoline jumalankodikund|katolikoid]] (päjumalanpert', konvent, seminarii, katoližed keskškolad).
 
