--- a/Mikel'andželo.mw
+++ b/Mikel'andželo.mw
@@ -3,9 +3,11 @@
 | изображение = Miguel Ángel, por Daniele da Volterra (detalle).jpg
 | описание изображения = Mikel'andželo (''Daniel' de Vol'terran rad'')
 }}
-'''Mikel'andželo Buonarotti''' (täuz' nimi: ''Mikel'andželo di Lodoviko Buonarotti Simoni'', {{lang-it|Michelangelo di Lodovico Buonarroti Simoni}}; sünd. 6. keväz'ku 1475, [[Kapreze Mikelandželo]], [[Toskan]] — kol. 18. uhoku 1564, [[Rim]], [[Papan agj]]) — [[Italii|italijalaine]] voimujupirdai, skul'ptor, arhitektor, runokirjutai da meletai. Hän om üks' surembišpäi da järedambišpäi [[Renessans]]an aigan mastarišpäi.
+'''Mikel'andželo Buonarotti''' (täuz' nimi: ''Mikel'andželo di Lodoviko Buonarotti Simoni'', {{lang-it|Michelangelo di Lodovico Buonarroti Simoni}}; sünd. 6. keväz'ku 1475, [[Kapreze Mikelandželo]], [[Toskan]] — kol. 18. uhoku 1564, [[Rim]], [[Papan agj]]) — [[Italii|italijalaine]] voimujupirdai, skul'ptor, arhitektor, runokirjutai da meletai. Hän om üks' surembiš da järedambiš mastarišpäi [[Renessans]]an aigan, sai avarod tetabut elon aigan völ, tegi sädusid ühesan Rimalaižen papan täht.
 
-Om kaičenus äi dokumentoid Mikel'andželon elos da sädamižes. Mastarin mahtuz zavodiše da lopiše [[ristitun hibj]]an ozutandas.
+Om kaičenus äi dokumentoid Mikel'andželon elos da sädamižes. Mehen ezmäine biografii om sätud, konz hän oli elegiš völ, oficialine biograf oli Džordžo Vazari. Mastarin mahtuz zavodiše da lopiše [[ristitun hibj]]an ozutandas.
+
+Mikel'andželon kaikiš tetabambiš skul'pturtöišpäi oma «David», «Bahus», «Pjeta», Moisein, Lijan i Rahilin kuvapatshad Julii II-papan kaumusen täht. Sikstinan kapellan lagen freskad oma pirdajan kaikiš surembiš töišpäi. Arhitekturižiden sädusiden keskes — Ph. Pedroin päjumalanpertin kumplon projekt, Laurencianan kirjišton pordhad, Kampidol'jo-torg.
 
 == Homaičendad ==
 <references/>
