*Empty MediaWiki Message*

--- a/Twice_(muzikgrupp).mw
+++ b/Twice_(muzikgrupp).mw
@@ -1,7 +1,7 @@
 {{Muzikgrupp
  | Nimi = Twice
  | Logo = 
- | Foto = Twice performing at SAC 2016 02 (cropped).jpg
+ | Foto = Twice performing at SAC 2016 01.jpg
  | Žanrad = [[keipop]], [[džeipop]]
  | Voded = 2015–Sekarang
  | Valdkund = Suvikorei
