Reverted 2 edits by [[Special:Contributions/125.165.10.43|125.165.10.43]] ([[User talk:125.165.10.43|talk]]): Crosswiki vandalism (TwinkleGlobal)

--- a/Twice_(muzikgrupp).mw
+++ b/Twice_(muzikgrupp).mw
@@ -1,9 +1,9 @@
 {{Muzikgrupp
- | Nimi = Twice
- | Logo = 
- | Foto = Twice performing at SAC 2016 01.jpg
+ | Nimi = Twice<br />트와이스 ''teuwaiseu''
+ | Logo = TWICE LOGO.png
+ | Foto = Twice Members in 2015 - 3x3.jpg
  | Žanrad = [[keipop]], [[džeipop]]
- | Voded = 2015–Sekarang
+ | Voded = 2015–
  | Valdkund = Suvikorei
  | Lidn = Seul
  | Kel' = [[korejan kel']],<br />[[japonan kel']]
@@ -14,6 +14,8 @@
  | Sait = http://twice.jype.com/
 }}
 '''«Twice»''' («kahtišti» [[anglijan kel'|anglijan kelespäi]], {{lang-ko|트와이스}} ''teuwaiseu'', {{lang-ja|トゥワイス}} ''towwaisu'') om neiččiden [[Korejan Tazovaldkund|suvikorejine]] muzikgrupp, kudamb edestab muzikad keipop- da džeipop-stiliš.
+
+Gruppan aluz om pandud [[Seul]]-lidnha vl 2015.
 
 == Mülükund ==
 * Im Najon
