--- a/Slüdänk_(lidn).mw
+++ b/Slüdänk_(lidn).mw
@@ -1,9 +1,9 @@
 {{Eländpunkt
  | Nimi = Slüdänk<br />Слюдянка
- | Lidnanznam = Slyudyanka coat of arms.jpg
- | Flag =
+ | Lidnanznam = The coat of arms of the city of Slyudyanka.jpg
+ | Flag = Flag of Slyudyanskoe (Irkutsk oblast).png
  | Lidnanznam text = Slüdänkan lidnanznam
- | Flag text =
+ | Flag text = Slüdänkan flag
  | Valdkund = Venäma
  | Eläjiden lugu = 18,241
  | Voz' = 2017
@@ -31,9 +31,20 @@ Voib olda lujid manrehkaidusid (11 ballhasai 12:späi), mugoižed oliba vll 1862
 Ojandeh-žilo ({{lang-ru|Сухой Ручей}}, 291 rist. vl 2012) i Burovščin-žilo (51 rist. vl 2012) mülüdas lidnankundha Slüdänkan ližaks. Lidnankundan pind — 436,34 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 18 574 ristitud, lidnankundan — 18 927 ristitud. Kaikiš suremb lidnan ristitišt oli 23 tuhad eläjid vl 1967. Vl 2017 kaik 18 581 ristitud elihe lidnankundas. Ortodoksižen hristanuskondan ph. Mikulain jumalanpert' i katoline ph. Jurgijan-vägestusenkandajan časoun' oma olmas.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 18 574 ristitud, lidnankundan — 18 927 ristitud. Kaikiš suremb lidnan ristitišt oli 23 tuhad eläjid vl 1967. Vl 2017 kaik 18 581 ristitud elihe lidnankundas.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] puine ph. Mikulain jumalanpert'<ref>[http://sobory.ru/geo/locat/13550 Slüdänkan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> (om saudud vl 1915) i [[katoline jumalankodikund|katoline]] ph. Jurgijan-vägestusenkandajan časoun' oma olmas lidnas.
 
 Professionaližen opendusen lähembaine aluzkund sijadase [[Baikal'sk]]as.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Administration of Sludyanka.jpg|Lidnan i Slüdänkan rajonan administracijan sauvuz (2011)
+Train trip around Lake Baikal 2015-07 111.jpg|Ph. Mikulain jumalanpert' (ortodoksine hristanuskond), vn 2015 nägu
+Slyudyanka. Locomotive depot.jpeg|Raudten vedimdepo vl 2010
+Больница Слюдянки.JPG|Läžundkodi (2012)
+Станция Слюдянка-1 вокзал.jpg|Slüdänk I-raudtestancii vagzalanke (huralpäi) vl 2014
+</gallery>
 
 == Homaičendad ==
 <references/>
